wacc/test/golden/syntaxErr.while.whilErr
# while typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  whil false do
    skip
  done
end


(line 12, column 8):
  unexpected "f"
  expected "=" or "["
  >begin
  >  whil false do
          ^
  >    skip